# FirmwareUpdater

./: .gitignore  README.md
Bootloader/: COPYING
Bootloader/bootloader/: bootloader.cpp  bootloader.h  bootmanager.cpp  bootmanager.h  checksum.cpp  checksum.h  config.h  crc32.c  crc32.h  hexrecord.cpp  hexrecord.h  programmer.cpp  programmer.h
Bootloader/examples/: MemoryMap.txt
Bootloader/examples/Common/: hostinterface.cpp  hostinterface.h  staticstring.h  string.h
Bootloader/examples/Nucleo-F446RE-Bootloader/: .cproject  .mxproject  .project  Nucleo-F446RE-Bootloader.ioc  STM32F446RETX_FLASH.ld
Bootloader/examples/Nucleo-F446RE-Bootloader/Core/Inc/: main.h
Bootloader/examples/Nucleo-F446RE-Bootloader/Core/Src/: main.c  stm32f4xx_hal_msp.c
Bootloader/examples/Nucleo-F446RE-Bootloader/User/: application.cpp  application.h  bootloader.cpp  bootloader.h  bootmanager.cpp  bootmanager.h  checksum.cpp  checksum.h  config.h  crc32.c  crc32.h  hexrecord.cpp  hexrecord.h  hostinterface.cpp  hostinterface.h  programmer.cpp  programmer.h  staticstring.h  string.h  usermain.cpp
Bootloader/examples/Nucleo-F446RE-Firmware/: .cproject  .mxproject  .project  Nucleo-F446RE-Firmware.ioc  STM32F446RETX_FLASH.ld
Bootloader/examples/Nucleo-F446RE-Firmware/Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
Bootloader/examples/Nucleo-F446RE-Firmware/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Bootloader/examples/Nucleo-F446RE-Firmware/User/: application.cpp  application.h  config.h  usermain.cpp  usermain.h
Packager/: CMakeLists.txt  FirmwarePackager.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadata.cpp  metadata.h  packager.cpp  packager.h  presetsmenu.cpp  presetsmenu.h
Scripts/: genkey.sh  makepkg.sh
